--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "keythereum": "^0.2.6",
     "mkdirp": "^0.5.1",
     "read": "^1.0.7",
-    "rimraf": "^2.5.2"
+    "rimraf": "^2.5.2",
+    "web3": "^0.15.3"
   }
 }
