--- a/package.json
+++ b/package.json
@@ -22,6 +22,8 @@
   "dependencies": {
     "bluebird": "^3.3.5",
     "commander": "^2.9.0",
+    "ethereumjs-tx": "^1.1.1",
+    "hooked-web3-provider": "^1.0.0",
     "keythereum": "^0.2.6",
     "mkdirp": "^0.5.1",
     "read": "^1.0.7",
