--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "commander": "^2.9.0",
     "ethereumjs-tx": "^1.1.1",
     "hooked-web3-provider": "^1.0.0",
+    "json-pointer": "^0.5.0",
     "keythereum": "^0.2.6",
     "mkdirp": "^0.5.1",
     "read": "^1.0.7",
